--- a/banister.lawlytics.frontend.css
+++ b/banister.lawlytics.frontend.css
@@ -1339,3 +1339,14 @@ article:hover .continue a {
 END subpages overrides
 =========== */
 
+.primary-wrap {
+    padding-top: 75px;
+    padding-right: 20px;
+    padding-bottom: 75px;
+    padding-left: 20px;
+    max-width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+}
+
